update on view consultants with null specialty endpoint